--- a/Tech-Store/index.html
+++ b/Tech-Store/index.html
@@ -5,6 +5,17 @@
         <title>Tech Store</title>
     </head>
     <body>
-        hello again
+        <div>
+            <h1>Tech Store</h1>
+        </div>
+        <div>
+            <h2>Shop by</h2>
+            <h3>Category</h3>
+            <h3>Price <span>($)</span></h3>
+        </div>
+
+        <div>
+            <h2>All items:</h2>
+        </div>
     </body>
 </html>
